Small readability edits

--- a/Navier-Stokes and Fluid Dynamics/CFD Python - 12 Steps to Navier-Stokes/Step 1 - 1D Linear Convection/1D Convection.ipynb
+++ b/Navier-Stokes and Fluid Dynamics/CFD Python - 12 Steps to Navier-Stokes/Step 1 - 1D Linear Convection/1D Convection.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Based on https://nbviewer.org/github/barbagroup/CFDPython/blob/master/lessons/01_Step_1.ipynb"
+    "Based on https://lorenabarba.com/blog/cfd-python-12-steps-to-navier-stokes/"
    ]
   },
   {
@@ -132,7 +132,7 @@
     "nextu = np.zeros(nx)\n",
     "\n",
     "#Run for each time step\n",
-    "for i in range(steps):\n",
+    "for _ in range(steps):\n",
     "    for i in range(nx):\n",
     "        #Implement the equation for the next time-step\n",
     "        nextu[i] = u[i] - c * dt / dx * (u[i] - u[i-1])\n",
