--- a/Navier-Stokes and Fluid Dynamics/CFD Python - 12 Steps to Navier-Stokes/Step 2 - Nonlinear Convection/Nonlinear Convection.ipynb
+++ b/Navier-Stokes and Fluid Dynamics/CFD Python - 12 Steps to Navier-Stokes/Step 2 - Nonlinear Convection/Nonlinear Convection.ipynb
@@ -116,7 +116,7 @@
     "nextu = np.zeros(nx)\n",
     "\n",
     "#Run for each time step\n",
-    "for i in range(steps):\n",
+    "for _ in range(steps):\n",
     "    for i in range(nx):\n",
     "        #Implement the equation for the next time-step\n",
     "        nextu[i] = u[i] - (u[i] * dt / dx * (u[i] - u[i-1]))\n",
